# docker-k8s-security-ch1

./: .env.example  .gitignore  README.md  agent.md  docker-compose.yml
.github/workflows/: publish.yml  release.yml  security-scan.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
deploy/: README.md
deploy/argocd/: ch1-application.yaml
deploy/sealed-secrets/: README.md  ghcr-pull.sealed.yaml
frontend/: .dockerignore  99-env-config.sh  Dockerfile  README.md  config.js  config.template.js  index.html  nginx.conf
helm/: Chart.yaml  README.md  values.yaml
helm/charts/backend/: Chart.yaml  values.yaml
helm/charts/backend/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm/charts/frontend/: Chart.yaml  values.yaml
helm/charts/frontend/templates/: _helpers.tpl  configmap-nginx.yaml  deployment.yaml  service.yaml
