[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-backend"
version = "1.0.0"
description = "Minimal FastAPI backend for Chapter 1 exercise"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.27.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
